--- a/msi/tools/amazon-cloudwatch-agent.wxs
+++ b/msi/tools/amazon-cloudwatch-agent.wxs
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'
-     xmlns:util='http://schemas.microsoft.com/wix/UtilExtension'>
+<Wix xmlns='http://schemas.microsoft.com/wix/2006/wi' xmlns:util='http://schemas.microsoft.com/wix/UtilExtension'>
 
   <Product Id='*'
     Name='Amazon CloudWatch Agent'
@@ -151,23 +150,20 @@
             <CreateFolder />
         </Component>
     </DirectoryRef>
+    
+    <!-- Setup a silent execution contrainer around the command -->
+    <CustomAction Id="QtExecUpdatePermission" BinaryKey="WixCA" DllEntry="CAQuietExec" Execute="deferred" Return="check" Impersonate="no" />
+
+    <InstallExecuteSequence>
+        <Custom Action="QtExecUpdatePermission" After="InstallFiles">NOT UPGRADINGPRODUCTCODE AND NOT (REMOVE~="ALL")</Custom>
+    </InstallExecuteSequence>
+
      <!-- Find and use powershell to run the command, because just running "powershell.exe" did not resolve (not in ENV path) when using "WixQuietExec".-->
     <SetProperty Id="QtExecUpdatePermission" 
         Sequence="execute"
         Before ="QtExecUpdatePermission"
         Value='&quot;[POWERSHELLEXE]&quot;  -ExecutionPolicy Bypass -InputFormat None -NonInteractive -File "[INSTALLDIR]permission.ps1" ' 
     />
-    <!-- Setup a silent execution contrainer around the command -->
-    <CustomAction Id="QtExecUpdatePermission" 
-    BinaryKey="WixCA" 
-    DllEntry="CAQuietExec" 
-    Execute="deferred" 
-    Return="check" 
-    Impersonate="no" />
-
-    <InstallExecuteSequence>
-    <Custom Action="QtExecUpdatePermission" After="InstallFiles">NOT UPGRADINGPRODUCTCODE AND NOT (REMOVE~="ALL")</Custom>
-    </InstallExecuteSequence>
 
     <MajorUpgrade AllowDowngrades="yes"/>
   </Product>
